Fixed word wrap on IE, Firefox, and Chrome

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -304,13 +304,8 @@ h2.no-bottom-margin {
 }
 
 .word-wrap {
-    -ms-word-break: break-all;
-    word-break: break-all;
     word-break: break-word;
-    -ms-hyphens: auto;
-    -moz-hyphens: auto;
-    -webkit-hyphens: auto;
-    hyphens: auto;
+    word-wrap: break-word;
 }
 
 .identicon-home {
